--- a/src/templates/_layouts/main.twig
+++ b/src/templates/_layouts/main.twig
@@ -3,11 +3,11 @@
 {% set title = "Colorit"|t('colorit') %}
 
 {% set navItems = {
-    'about': { title: "About"|t('colorit') },
     'fieldtype': { heading: "Fieldtype"|t('colorit') },
-    'settings/presets': { title: "Presets"|t('colorit') },
-    'settings': { heading: "Settings"|t('colorit') },
-    'settings/general': { title: "General"|t('colorit') },
+    'presets': { title: "Presets"|t('colorit') },
+    'general': { heading: "General"|t('colorit') },
+    'settings': { title: "General"|t('colorit') },
+    'about': { title: "About"|t('colorit') },
 } %}
 
 {% set selectedItemHandle = selectedItem ?? craft.app.request.getSegment(2)~(craft.app.request.getSegment(3) ? '/'~craft.app.request.getSegment(3)) %}
