--- a/src/templates/presets/_edit.twig
+++ b/src/templates/presets/_edit.twig
@@ -12,7 +12,7 @@
         <input type="hidden" name="type" value="{{ preset.type }}">
     {% endif %}
 
-    {{ redirectInput('colorit/settings/presets') }}
+    {{ redirectInput('colorit/presets') }}
     {{ csrfInput() }}
 
     {{ forms.textField({
