--- a/src/templates/settings.twig
+++ b/src/templates/settings.twig
@@ -7,7 +7,7 @@
 
     <input type="hidden" name="action" value="plugins/save-plugin-settings">
 	<input type="hidden" name="pluginHandle" value="colorit">
-    {{ redirectInput('colorit/settings/general') }}
+    {{ redirectInput('colorit/settings') }}
     {{ csrfInput() }}
 
     {% namespace 'settings' %}
