Getting things setup @ Pressed

--- a/src/templates/_layouts/base.html
+++ b/src/templates/_layouts/base.html
@@ -1,4 +1,4 @@
 {% extends '_layouts/cp' %}
-{% do view.registerAssetBundle("fruitstudios\\colorit\\web\\assets\\colorit\\ColoritAssetBundle") %}
+{% do view.registerAssetBundle("presseddigital\\colorit\\web\\assets\\colorit\\ColoritAssetBundle") %}
 
 {% set title = ( title ?? 'Colorit' ) ~ ' ' %}
