--- a/src/templates/_fields/colorit/input.twig
+++ b/src/templates/_fields/colorit/input.twig
@@ -21,7 +21,7 @@
 					]|filter|join(' ') %}
 
 					{% set color = paletteColor.color %}
-					{% if not (color starts with '#') %}
+					{% if not (color starts with '#' or color starts with 'rgb') %}
 						{% set color = '#' ~ color %}
 					{% endif %}
 
@@ -48,7 +48,7 @@
 	{% if field.allowCustomColor %}
 
 		{% set color = custom %}
-		{% if not (color starts with '#') %}
+		{% if not (color starts with '#' or color starts with 'rgb') %}
 			{% set color = '#' ~ color %}
 		{% endif %}
 
