--- a/src/templates/_fields/colorit/preview.twig
+++ b/src/templates/_fields/colorit/preview.twig
@@ -19,7 +19,7 @@
 						craft.colorit.colors.hexIsTransparent(paletteColor.color) ? 'colorit--palette-colorIsTransparent' : null,
 					]|filter|join(' ') %}
 
-					{% set processedColor = field.allowOpacity and opacity < 100 ? craft.colorit.colors.hexToRgba(paletteColor.color, opacity) : paletteColor.color %}
+					{% set processedColor = field.allowOpacity and opacity < 100 ? craft.colorit.colors.hexToRgba(paletteColor.color, opacity) : '#' ~ paletteColor.color %}
 
 					<li class="{{ class }}" title="{{ paletteColor.label }}" style="background:{{ processedColor }};"></li>
 
@@ -37,7 +37,7 @@
 		{% set processedColor = custom and field.allowOpacity and opacity < 100 ? craft.colorit.colors.hexToRgba(custom, opacity) : custom %}
 
 		<div class="colorit--palette-customColor{{ processedColor ? ' colorit--palette-colorIsSelected' }}">
-			<input class="text" type="text" value="{{ custom }}" placeholder="#D65B4B" novalidate disabled/>
+			<input class="text" type="text" value="{{ custom }}" placeholder="#HEX" novalidate disabled/>
 			<div class="colorit--palette-customColorSwatch" style="background:{{ processedColor }};"></div>
 		</div>
 
