--- a/src/templates/_fields/colorit/input.twig
+++ b/src/templates/_fields/colorit/input.twig
@@ -9,6 +9,9 @@
 	{% if field.palette|length %}
 
 		<div>
+			{% if field.fieldDescriptions %}
+				<p class="colorit--palette-description">{{ 'Palette'|t('colorit') }}</p>
+			{% endif %}
 
 			<ul class="colorit--palette-colors" data-colorit-palette-colors>
 
@@ -28,9 +31,7 @@
 				{% endfor %}
 
 			</ul>
-
 			<input id="{{ id }}-handle" type="hidden" name="{{ name }}[handle]" value="{{ handle }}">
-
 		</div>
 
 	{% else %}
@@ -45,6 +46,9 @@
 		{% set processedColor = custom and field.allowOpacity and opacity < 100 ? craft.colorit.colors.hexToRgba(custom, opacity) : custom %}
 
 		<div class="colorit--palette-customColor{{ processedColor ? ' colorit--palette-colorIsSelected' }}" data-colorit-palette-custom>
+			{% if field.fieldDescriptions %}
+				<p class="colorit--custom-description">{{ 'Custom HEX'|t('colorit') }}</p>
+			{% endif %}
 			{{ forms.text({
 				id: id~'-custom',
 				name: name~'[custom]',
@@ -54,6 +58,8 @@
 			<div class="colorit--palette-customColorSwatch" data-color="{{ custom }}" style="background:{{ processedColor }};" data-colorit-palette-custom-color>
 			</div>
 		</div>
+
+
 
 	{% else %}
 
@@ -65,8 +71,13 @@
 	{% if field.allowOpacity %}
 
 		<div class="colorit--palette-opacity" data-colorit-palette-opacity>
+			{% if field.fieldDescriptions %}
+				<p class="colorit--opacity-description">{{ 'Opacity'|t('colorit') }}</p>
+			{% endif %}
 			<input id="{{ id }}-opacity" class="text" type="number" name="{{ name }}[opacity]" value="{{ opacity }}" min="1" max="100" novalidate/>
 		</div>
+
+
 
 	{% else %}
 
