--- a/src/templates/_fields/colorit/settings.twig
+++ b/src/templates/_fields/colorit/settings.twig
@@ -145,7 +145,8 @@
         name: 'colorFormat',
         options: {
             'auto' : 'Auto (Best Guess)',
-            'hex' : '#454545',
+            'hex' : '454545',
+            'hashhex' : '#454545',
             'rgb' : 'rgb(255,255,255)',
             'rgba' : 'rgb(255,255,255,0.5)'
         },
