--- a/src/templates/_fields/colorit/preview.twig
+++ b/src/templates/_fields/colorit/preview.twig
@@ -1,6 +1,6 @@
 {% import "_includes/forms" as forms %}
 
-{% set custom = '#cccccc' %}
+{% set custom = '#CCCCCC' %}
 {% set opacity = 100 %}
 
 <div class="colorit--palette flex">
