--- a/src/templates/_fields/colorit/settings.twig
+++ b/src/templates/_fields/colorit/settings.twig
@@ -131,6 +131,14 @@
         errors: field.getErrors('allowCustomColor'),
     }) }}
 
+    {{ forms.lightswitchField({
+        label: "Custom Color Picker"|t('colorit'),
+        instructions: "Allow the user to set the custom color using the html5 picker."|t('colorit'),
+        id: 'allowCustomColorPicker',
+        name: 'allowCustomColorPicker',
+        on: field.allowCustomColorPicker,
+        errors: field.getErrors('allowCustomColorPicker'),
+    }) }}
 
     {{ forms.lightswitchField({
         label: "Field Descriptions"|t('colorit'),
