Tweak custom hex placeholder

--- a/src/templates/_fields/colorit/input.twig
+++ b/src/templates/_fields/colorit/input.twig
@@ -55,7 +55,7 @@
 			{{ forms.text({
 				id: id~'-custom',
 				name: name~'[custom]',
-				placeholder: '#000000',
+				placeholder: '#HEX',
 				value: custom
 			}) }}
 			<div class="colorit--palette-customColorSwatch" data-color="{{ custom }}" style="background:{{ processedColor }};" data-custom-color></div>
